$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-06-09 [C] Replaced hard-coded lang strings with lang variables ind delete.php {Frantz}
2009-06-09 [A] Added support for HTML5 <video> and <audio> tags {Nibbler}
2009-06-09 [O] Changed keyword-insertion from list from pop-up to greybox {GauGau}
2009-06-09 [O] Beautified upload screens by moving noise into help display {GauGau}
2009-06-09 [B] Fixed the issues with folders with spaces and path separators in batch upload - topic 57256 {Aditya}
2009-06-08 [A] Added file and line numbers to debug mode query list {Nibbler}
2009-06-08 [A] Added config option to count admin views {eenemeenemuu}
2009-06-07 [D] Translation Copyright section for the french doc {Frantz}
2009-06-06 [D] Replaced hard-coded table row alternation in docs with JS-driven alternation {GauGau}
2009-06-06 [A] Added functionality to allow use of editpics.php by non-admin users {thread 59414} {Aditya}
2009-06-06 [C] Added new string when in upload approval mode insteas of empty album message {SaWey}
2009-06-06 [B] Fixed IM being selected in installation when it's not working {SaWey}
2009-06-05 [C] Fixed bad displaying admin menu buttons on thumnails view with longer names as in english {Frantz}
2009-06-05 [B] Re-added record for encrypted passwords into basic.sql (thread ID 59916) {GauGau}
2009-06-05 [M] Removed the include folder is_writable check and warning message (thread 59896) {Abbas}
2009-06-05 [B] Check for default values in admin section not working correctly {SaWey}
2009-06-04 [C] Added nicer debug_output {GauGau}