@@ -181,7 +181,7 @@ EOT;
 
 
 // Function to start a 'standard' table
-function starttable($width = '-1', $title = '', $title_colspan = '1')
+function starttable($width = '-1', $title = '', $title_colspan = '1', $zebra_class = '')
 {
     global $CONFIG;
 
@@ -204,14 +204,14 @@ function starttable($width = '-1', $title = '', $title_colspan = '1')
         </tr>
 </table>
 <!-- Start standard table -->
-<table align="center" width="$width" cellspacing="1" cellpadding="0" class="maintableb">
+<table align="center" width="$width" cellspacing="1" cellpadding="0" class="maintableb $zebra_class">
 
 EOT;
     } else {
         echo <<<EOT
 
 <!-- Start standard table -->
-<table align="center" width="$width" cellspacing="1" cellpadding="0" class="maintable">
+<table align="center" width="$width" cellspacing="1" cellpadding="0" class="maintable $zebra_class">
 
 EOT;
     }
